@@ -162,6 +162,17 @@ if ($_SERVER['REQUEST_METHOD'] == "POST")
       else {
          db_log ($SESSID_USERNAME, $fDomain, 'edit_mailbox', $fUsername);
 
+         $result = db_query ("UPDATE $table_alias SET active=$sqlActive WHERE address='$fUsername' AND domain='$fDomain'");
+         if ($result['rows'] != 1)
+         {
+            $error = 1;
+            $tMessage = $PALANG['pEdit_mailbox_result_error'];
+         }
+         else
+         {
+            db_log ($SESSID_USERNAME, $fDomain, 'edit_alias_state', $fUsername);
+         }
+
          header ("Location: list-virtual.php?domain=$fDomain");
          exit(0);
       }
