@@ -13,6 +13,7 @@
 Changes since 2.3.6 release
 ----------------------------------------------------------------
   - lt.lang translation update
+  - when enabling/disabling a mailbox, also update the corresponding alias
 
 Version 2.3.6 - 2013/01/02 - SVN r1417 (postfixadmin-2.3 branch)
 ----------------------------------------------------------------
